fixed bug where younger ctopp was not showing up

--- a/src/components/App/App.css
+++ b/src/components/App/App.css
@@ -131,3 +131,16 @@ input {
   background-color: #ebe6e6;
   color: #e57125;
 }
+.assessmentCard {
+  display: flex;
+  border: black;
+  width: 450px;
+  justify-content: space-between;
+}
+.assessmentContainer{
+  display: flex;
+  justify-content: space-evenly;
+  align-content: space-evenly;
+  flex-wrap: wrap;
+
+}
